--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue3-ts-quick-start",
+  "name": "yemianji",
   "version": "0.1.0",
   "description": "Electron Vue3 Typscript Quick Start",
   "author": "You",
